# logos

./: .gitignore  .openapi-python-client.yaml  .pre-commit-config.yaml  AGENTS.md  TODO.md  biome.json  logos.code-workspace  orval.config.ts  package-lock.json  package.json  pyproject.toml
apps/api/: .env.example  main.py  pyproject.toml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 9f0efb80cbf6_create_sessions_tables.py
apps/api/scripts/: TEMPORARY_RUN_TEST.py  export_openapi.py
apps/api/src/api/: deps.py  main.py  settings.py
apps/api/src/api/db/: database.py  mixins.py  models.py  types.py
apps/api/src/api/modules/ai/: catalog.py  deps.py  errors.py  models.py  prompts.py  resolver.py  router.py  schemas.py  service.py
apps/api/src/api/modules/engine/: adapters.py  background.py  deps.py  engine.py  generation.py  models.py  schemas.py  service.py
apps/api/src/api/modules/health/: router.py
apps/api/src/api/modules/session_configs/: constants.py  deps.py  errors.py  router.py  service.py
apps/api/src/api/modules/sessions/: adapters.py  (+6 more)
apps/api/src/api/routes/: health.py
apps/api/src/api/schemas/: health.py
apps/api/src/api/shared/: errors.py  exception_handlers.py  iterables.py  responses.py  time.py
apps/api/src/api/vector/: database.py
apps/api/tests/: test_health.py
apps/tui/: AGENTS.md  pyproject.toml
apps/tui/src/tui/: __init__.py  app.py  app.tcss  main.py  navigation.py  settings.py
apps/tui/src/tui/screens/: base.py
apps/tui/src/tui/shared/: colors.py  state.py  text.py  textual.py  time.py
apps/tui/src/tui/widgets/: footer.py  forms.py  header.py  participants_table.py  tools_select.py
apps/tui/tests/: test_app.py
(+185 files in other folders)
