[project]
name = "logos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    "packages/client-py",
    "packages/client-ts",
]

[tool.ruff.lint]
select = ["F", "I", "UP"]
