[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "anyio>=4.13.0",
    "fastapi>=0.136.3",
    "litellm>=1.88.1",
    "pydantic-settings>=2.14.1",
    "sse-starlette>=3.0.3",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
